<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/wyb_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/wyb"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/mylove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mylove"
        android:textColor="@color/text1"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wyb_image" />

    <TextView
        android:id="@+id/mylove1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mylove1"
        app:layout_constraintTop_toBottomOf="@id/mylove"
        app:layout_constraintLeft_toLeftOf="@id/mylove"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        android:textColor="@color/text1" />

    <ImageView
        android:id="@+id/star_img"
        android:layout_width="@dimen/dimen_24dp"
        android:layout_height="@dimen/dimen_24dp"
        app:layout_constraintTop_toBottomOf="@id/mylove1"
        app:layout_constraintLeft_toLeftOf="@id/mylove"
        android:src="@drawable/ic_star"
       android:layout_marginTop="@dimen/dimen_24dp"/>

    <TextView
        android:id="@+id/mylove2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mylove2"
        android:textSize="@dimen/choice_text"
        android:textColor="@color/text2"
        app:layout_constraintLeft_toRightOf="@id/star_img"
        app:layout_constraintTop_toBottomOf="@id/mylove1"
        android:layout_marginTop="@dimen/dimen_24dp" />
    <TextView
        android:id="@+id/mylove3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mylove3"
        android:textSize="@dimen/choice_text"
        app:layout_constraintLeft_toLeftOf="@id/mylove"
        app:layout_constraintTop_toBottomOf="@id/mylove2"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:textColor="@color/text1"/>
    <TextView
        android:id="@+id/mylove4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text1"
        android:text="@string/mylove4"
        android:textSize="@dimen/choice_text"
        app:layout_constraintLeft_toLeftOf="@id/mylove"
        app:layout_constraintTop_toBottomOf="@id/mylove3"
        android:layout_marginTop="@dimen/dimen_16dp"/>

        <TextView
            android:id="@+id/mylove5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/text1"
            android:textSize="@dimen/choice_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/mylove"
            android:text="$99.9"
            android:layout_marginBottom="@dimen/dimen_24dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/mylove5"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rounded"
        android:text="@string/btn_text"
        android:textColor="@android:color/white"
        android:paddingLeft="@dimen/dimen_12dp"
        android:paddingRight="@dimen/dimen_12dp"
        android:layout_marginRight="@dimen/dimen_12dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>